--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,3 +4,8 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.container--flex {
+    display: flex;
+    justify-content: space-between;
+}
