--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -2,7 +2,7 @@
     display: flex;
 }
 
-.clients-item {
+.clients-list__item {
     margin-right: 30px;
 
     &:last-child{
@@ -10,7 +10,7 @@
     }
 }
 
-.clients-link {
+.clients-list__link {
     display: flex;
     width: 170px;
     height: 92px;
@@ -30,7 +30,7 @@
                 }
 }
 
-.clients-icon {
+.clients-list__icon {
     fill: currentColor;
 }
 
