--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,4 +1,4 @@
-.hero-section {
+.hero {
     height: 600px;
     padding: 200px 0;
 
@@ -10,7 +10,7 @@
     
 }
 
-.hero-title {
+.hero__title {
     width: 690px;
     margin: 0 auto 30px;
 
