--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ img {
 }
 
 .navigation__link,
-.contact__item {
+.contact__link {
   display: inline-flex;
   align-items: center;
   padding-top: 32px;
@@ -104,9 +104,13 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.contact__link {
+  color: #757575;
+}
+
 .logo__color,
-.contact__item:hover,
-.contact__item:focus {
+.contact__link:hover,
+.contact__link:focus {
   color: #2196f3;
 }
 
@@ -116,7 +120,9 @@ img {
 .navigation__link:hover, .navigation__link:focus {
   color: #2196f3;
 }
-
+.navigation__link.current {
+  color: #2196f3;
+}
 .navigation__link.current::after {
   content: "";
   position: absolute;
@@ -125,9 +131,6 @@ img {
   height: 4px;
   border-radius: 2px;
   background-color: #2196f3;
-}
-.navigation__link.current::after.current {
-  color: #2196f3;
 }
 
 .navigation,
@@ -221,6 +224,7 @@ img {
 
 .social-list__link {
   color: #afb1b8;
+  background-color: rgba(255, 255, 255, 0.1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list__link:hover, .social-list__link:focus {
@@ -291,10 +295,6 @@ img {
 
 .social-list__link--light {
   color: #fff;
-}
-
-.footer-icon {
-  fill: currentColor;
 }
 
 .subscribe {
